# Agentic-Data-Analysis-Platform

./: .gitignore
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/routers/: datasets.py
backend/app/schemas/: datasets.py
backend/app/services/: dataset_store.py  profiling.py
backend/tests/: test_main.py
