[project]
name = "backend"
version = "0.1.0"
description = "Governed FastAPI backend for the Agentic Financial Analysis Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "openpyxl>=3.1.5",
    "pyarrow>=20.0.0",
    "pypdf>=5.6.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
